Enhance Gradle build and fix error